<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/default_margin"
    tools:background="@color/black">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/music_card_size"
        android:layout_height="@dimen/music_card_size"
        android:background="@color/transparent"
        app:cardCornerRadius="@dimen/default_corners">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/music_offer_image"
            android:layout_width="@dimen/music_image_width"
            android:layout_height="@dimen/music_image_height"
            android:layout_gravity="center"
            tools:src="@drawable/die_antwood" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/music_offer_title"
        style="@style/TitleText.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        tools:text="@string/tools_title" />

    <TextView
        android:id="@+id/music_offer_town"
        style="@style/TitleText.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        tools:text="@string/tools_subtitle" />

    <TextView
        android:id="@+id/music_offer_price"
        style="@style/TitleText.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:drawableLeft="@drawable/frgm_ic_airtickets"
        android:gravity="center_horizontal"
        tools:text="@string/tools_price" />

</LinearLayout>