<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_back_black"
    android:orientation="vertical"
    tools:context="ru.kanogor.feature_airtickets.presentation.firstpage.AirticketsFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progr_bar_size"
        android:layout_height="@dimen/progr_bar_size"
        android:layout_gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/airtickets_main_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_back_black"
            android:orientation="vertical">

            <TextView
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/top_mrg_airtick_frgm"
                android:gravity="center_horizontal"
                android:text="@string/airtick_frgm_title" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/parent_cardview_height"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/top_card_mrgn"
                android:backgroundTint="@color/dialog_back_grey"
                app:cardCornerRadius="@dimen/default_corners">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/small_card_height"
                    android:layout_margin="@dimen/default_margin"
                    android:backgroundTint="@color/search_background"
                    app:cardCornerRadius="@dimen/default_corners">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/image_margin_start"
                            android:layout_marginEnd="@dimen/image_margin_end"
                            android:src="@drawable/ic_search" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:descendantFocusability="beforeDescendants"
                            android:focusableInTouchMode="true"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/airtickets_from_edittext"
                                android:layout_width="@dimen/edittext_width"
                                android:layout_height="@dimen/edittext_height"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/small_margin"
                                android:background="@color/transparent"
                                android:digits=" -яюэьыъщшчцхфутсрпонмлкйизжёедгвбаЯЮЭЬЫЪЩШЧЦХФУТСРПОНМЛКЙИЗЖЁЕДГВБА"
                                android:gravity="center_vertical"
                                android:hint="@string/frgm_airtick_from"
                                android:inputType="text"
                                android:textColor="@color/white"
                                android:textColorHint="@color/hint_color"
                                android:textSize="@dimen/medium_text_size"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/line_height"
                                android:background="@color/search_line" />

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/airtickets_to_edittext"
                                android:layout_width="@dimen/edittext_width"
                                android:layout_height="@dimen/edittext_height"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginBottom="@dimen/small_margin"
                                android:background="@color/transparent"
                                android:clickable="false"
                                android:cursorVisible="false"
                                android:digits=" -яюэьыъщшчцхфутсрпонмлкйизжёедгвбаЯЮЭЬЫЪЩШЧЦХФУТСРПОНМЛКЙИЗЖЁЕДГВБА"
                                android:focusable="false"
                                android:gravity="center_vertical"
                                android:hint="@string/frgm_airtick_to"
                                android:textColor="@color/white"
                                android:textColorHint="@color/hint_color"
                                android:textSize="@dimen/medium_text_size"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/top_margin_middle_text"
                android:gravity="center_horizontal"
                android:text="@string/music_part" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/recycler_margin_top"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/music_offers_view_holder" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>